sofaware:add more kmods

--- a/package/mtk/applications/luci-app-turboacc-mtk/Makefile
+++ b/package/mtk/applications/luci-app-turboacc-mtk/Makefile
@@ -8,7 +8,13 @@ include $(TOPDIR)/rules.mk
 PKG_LICENSE:=GPL-3.0-only
 
 LUCI_TITLE:=LuCI support for MTK HNAT
-LUCI_DEPENDS:=+kmod-tcp-bbr @!PACKAGE_luci-app-turboacc
+LUCI_DEPENDS:= \
+	+kmod-tcp-bbr \
+	+kmod-nft-socket +kmod-nft-tproxy +kmod-nft-nat +kmod-inet-diag \
+	+kmod-ipt-nat6 +kmod-ipt-nat \
+	+kmod-ipt-physdev +kmod-nf-ipvs +kmod-veth +kmod-wireguard \
+	+kmod-ipt-fullconenat +kmod-fs-btrfs +luci-app-ttyd \
+	@!PACKAGE_luci-app-turboacc
 LUCI_PKGARCH:=all
 
 include $(TOPDIR)/feeds/luci/luci.mk
