--- a/defconfig/mt7975-ipailna-high-power.config
+++ b/defconfig/mt7975-ipailna-high-power.config
@@ -294,7 +294,7 @@ CONFIG_PKG_FORTIFY_SOURCE_2=y
 CONFIG_WARP_CHIPSET="mt7986"
 CONFIG_WARP_DBG_SUPPORT=y
 CONFIG_WARP_MEMORY_LEAK_DBG=y
-CONFIG_WARP_NEW_FW=y
+# CONFIG_WARP_NEW_FW is not set
 CONFIG_WARP_VERSION=2
 CONFIG_WED_HW_RRO_SUPPORT=y
 # CONFIG_WOLFSSL_HAS_ECC25519 is not set
